--- a/requirements.txt
+++ b/requirements.txt
@@ -34,20 +34,20 @@ multiprocess==0.70.16
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.5
-# nvidia-cublas-cu12==12.6.4.1
-# nvidia-cuda-cupti-cu12==12.6.80
-# nvidia-cuda-nvrtc-cu12==12.6.77
-# nvidia-cuda-runtime-cu12==12.6.77
-# nvidia-cudnn-cu12==9.5.1.17
-# nvidia-cufft-cu12==11.3.0.4
-# nvidia-cufile-cu12==1.11.1.6
-# nvidia-curand-cu12==10.3.7.77
-# nvidia-cusolver-cu12==11.7.1.2
-# nvidia-cusparse-cu12==12.5.4.2
-# nvidia-cusparselt-cu12==0.6.3
-# nvidia-nccl-cu12==2.26.2
-# nvidia-nvjitlink-cu12==12.6.85
-# nvidia-nvtx-cu12==12.6.77
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
@@ -77,7 +77,7 @@ torch==2.7.0
 torchmetrics==1.7.1
 tqdm==4.67.1
 transformers==4.51.3
-# triton==3.3.0
+triton==3.3.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
